[package]
name = "sitemap-rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.65"
authors = ["Todd Everett Griffin <toddgriffin@protonmail.com>"]
repository = "https://github.com/goddtriffin/sitemap-rs"
homepage = "https://www.toddgriffin.me/"
description = "A Rust library to generate URL, Index, Image, Video, and News sitemaps."
license = "MIT"
keywords = ["sitemap", "index-sitemap", "image-sitemap", "video-sitemap", "news-sitemap"]
categories = ["web-programming", "parsing"]
exclude = [
    ".idea/*",
    ".github/*",
]

[dependencies]
xml-builder = "0.5.1"
chrono = "0.4.22"

[dev-dependencies]
pretty_assertions = "1.3.0"
