[package]
name = "sitemap-rs"
version = "0.2.2"
edition = "2021"
rust-version = "1.81"
authors = ["Todd Everett Griffin <tgriffin115@gmail.com>"]
repository = "https://github.com/goddtriffin/sitemap-rs"
homepage = "https://www.toddgriffin.me/"
description = "A Rust library to generate URL, Index, Image, Video, and News sitemaps."
license = "MIT"
keywords = ["sitemap", "index-sitemap", "image-sitemap", "video-sitemap", "news-sitemap"]
categories = ["web-programming", "parsing"]
exclude = [
    ".idea/*",
    ".github/*",
]

[lib]
path = "src/lib.rs"

[lints.rust]
unsafe_code = { level = "forbid", priority = 0 }
unfulfilled_lint_expectations = { level = "forbid", priority = 1 }

[lints.clippy]
allow_attributes = { level = "forbid", priority = 1}
nursery = { level = "allow", priority = 0 }
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[dependencies]
xml-builder = "0.5.3"
chrono = "0.4.38"
